tugas 2 revisi
